--- a/scss/components/_secciones.scss
+++ b/scss/components/_secciones.scss
@@ -8,6 +8,23 @@
     margin-bottom: 30px;
 }
 
+.promociones-bancarias {
+    width: 100%;
+    overflow-x: hidden;
+
+    .promo-contenedor {
+        max-width: 100%;
+        overflow: hidden;
+
+    img {
+        max-width: 100%;
+        height: auto;
+        display: block;
+        }
+    }
+}
+
+
 .seccion {
     flex: 1 1 200px;
     max-width: 45%;
