--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -1,7 +1,32 @@
 @use '../utils/variables' as *;
 
 main {
+    max-width: 100%;
+    width: 100%;
     padding: 22px;
-    max-width: 1200px;
     margin: 0 auto;
 }
+
+
+html, body {
+    max-width: 100vw;
+    overflow-x: hidden;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+.mapa {
+    text-align: center;
+    margin: 0 auto;
+    padding: 20px 0; // opcional, sólo si querés separar del resto
+}
+
+.mapa-img {
+    max-width: 95vw;
+    height: auto;
+    display: inline-block;
+    margin: 0 auto;
+}
+
